# business_ctrl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
services/auth/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
services/auth/alembic/: env.py
services/auth/alembic/versions/: 091003eb9438_0001_init_schema_auth.py  29d9aecf2cc8_init_schema.py  46abdab3f5a4_remove_supervisor_id_field_fastapi_.py  568e0dca426d_0001_initial.py
services/auth/src/app/: main.py
services/auth/src/app/actions/: set_scope.py  superuser.py
services/auth/src/app/admin/: deps.py  panel.py
services/auth/src/app/auth/: __init__.py  backends.py  dependencies.py  manager.py  routers.py  strategies.py  transports.py
services/auth/src/app/core/: config.py  cors_csrf.py  security.py
services/auth/src/app/db/: __init__.py  base.py  session.py
services/auth/src/app/models/: __init__.py  access_token.py  teams.py  user.py  users.py
services/auth/src/app/repositories/: __init__.py  abc.py  sql_repo.py  teams_repo.py  users_repo.py
services/auth/src/app/schemas/: base.py  users.py
services/auth/src/app/services/: claims_client.py
services/auth/src/app/tests/: conftest.py
services/auth/src/app/tests/unittests/: test_user_repo.py
services/auth/src/app/utils/: __init__.py  dependencies.py
services/companies/: .env.example  pyproject.toml
services/companies/src/app/core/: config.py
services/companies/src/app/db/: base.py  session.py
services/teams_org/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
services/teams_org/alembic/: env.py
services/teams_org/alembic/versions/: 0b9b9b3d4148_fix_migration_cannot_create_invites.py  11f04b4416fe_add_unique_contraint_for_teams_model.py  42dc55e0cf65_add_nullable_false_to_models.py  65c041660cd6_init_schema.py  8b3a9dc0ecdc_init_schema.py  a0375455c0d0_add_invite_model.py  c610e1a6c8bf_current_schema_is_public.py
services/teams_org/repositories/: sql_repo.py
services/teams_org/src/app/: main.py
services/teams_org/src/app/api/: companies.py  invites.py  memberships.py  teams.py
services/teams_org/src/app/auth/: deps.py
services/teams_org/src/app/core/: config.py
services/teams_org/src/app/db/: __init__.py  base.py  session.py
services/teams_org/src/app/dependencies/: deps.py
services/teams_org/src/app/exceptions/: exceptions.py
services/teams_org/src/app/models/: __init__.py  companies.py  invites.py  membership.py  memberships.py  teams.py
services/teams_org/src/app/repositories/: __init__.py  base.py  base_sqlalchemy.py  companies.py  deps.py  invites.py  memberships.py  teams.py
services/teams_org/src/app/schemas/: companies.py  invites.py  memberships.py  principal.py  teams.py  user_claims.py
services/teams_org/src/app/security/: service_token.py
services/teams_org/src/app/services/: __init__.py  companies.py  deps.py  invites.py  memberships.py  teams.py
services/teams_org/src/app/tests/: conftest.py
services/teams_org/src/app/tests/unittests/: test_companies_api.py  test_memberships_api.py  test_teams_api.py
services/teams_org/src/app/tests/unittests/test_repo/: test_teams.py
services/teams_org/src/app/tests/unittests/test_services/: test_teams.py
services/teams_org/src/app/utils/: invites.py
