[project]
name = "auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Maniakalochka",email = "prochorwolochoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
strict = true
exclude = [
    "tests/",
    "migrations/",
]

mypy_path = "services/auth/src"